@@ -1,12 +1,10 @@
-#
-# test/fileutils/fileasserts.rb
-#
+# $Id$
 
 module Test
   module Unit
     module Assertions   # redefine
 
-      def assert_same_file( from, to )
+      def assert_same_file(from, to)
         _wrap_assertion {
           assert_block("file #{from} != #{to}") {
             File.read(from) == File.read(to)
@@ -14,7 +12,22 @@ module Test
         }
       end
 
-      def assert_file_exist( path )
+      def assert_same_entry(from, to)
+        _wrap_assertion {
+          assert_block("entry #{from} != #{to}") {
+            a = File.stat(from)
+            b = File.stat(to)
+
+            a.mode == b.mode and
+            #a.atime == b.atime and
+            a.mtime == b.mtime and
+            a.uid == b.uid and
+            a.gid == b.gid
+          }
+        }
+      end
+
+      def assert_file_exist(path)
         _wrap_assertion {
           assert_block("file not exist: #{path}") {
             File.exist?(path)
@@ -22,7 +35,7 @@ module Test
         }
       end
 
-      def assert_file_not_exist( path )
+      def assert_file_not_exist(path)
         _wrap_assertion {
           assert_block("file not exist: #{path}") {
             not File.exist?(path)
@@ -30,7 +43,7 @@ module Test
         }
       end
 
-      def assert_directory( path )
+      def assert_directory(path)
         _wrap_assertion {
           assert_block("is not directory: #{path}") {
             File.directory?(path)
@@ -38,10 +51,18 @@ module Test
         }
       end
 
-      def assert_symlink( path )
+      def assert_symlink(path)
         _wrap_assertion {
-          assert_block("is no symlink: #{path}") {
+          assert_block("is not a symlink: #{path}") {
             File.symlink?(path)
+          }
+        }
+      end
+
+      def assert_not_symlink(path)
+        _wrap_assertion {
+          assert_block("is a symlink: #{path}") {
+            not File.symlink?(path)
           }
         }
       end
